# physis-global

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT_PLAN.md  ONTOLOGY_EXPANSION_PLAN.md  README.md  physis.sh  physis_global.sh
.github/workflows/: ci.yml
config/: abstract_ontology.json  agent_ontology.json  category_ontology.json  engineering_ontology.json  machine_ontology.json  natural_ontology.json  praxis_ontology.json  semiotic_ontology.json  social_ontology.json
gateway/: physis_mcp_gateway.py
src/: actor.rs  cli.rs  config.rs  core.rs  dream.rs  gantt.rs  graph.rs  lib.rs  main.rs  mapper.rs  mcp.rs  models.rs  network.rs  ontology.rs  ontology_nonhuman.rs  output.rs  quantize.rs  rachmaninov.rs  reconstruct.rs  scanner.rs  sensory.rs  storage.rs  trie.rs
src/ai/: agent.rs  memory.rs  mod.rs  onnx_worker.rs  provider.rs  session.rs  tools.rs
src/embed/: clip.rs  jina.rs  mod.rs  onnx.rs  registry.rs
src/linguistic/: README.md  mod.rs  piraha.rs  sanskrit.rs  wenyan.rs
tests/: holarchy.rs  smoke_test.rs
