[package]
name = "physis"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
regex = "1"
once_cell = "1"

clap = { version = "4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
notify = { version = "7", optional = true }
rmcp = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["fs"], optional = true }
dotenvy = "0.15"
slotmap = { version = "1.0", features = ["serde"] }
memmap2 = "0.9"
bytemuck = { version = "1.15", features = ["derive"] }
crossbeam-channel = "0.5"
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.21", optional = true }
urlencoding = "2.1"
sled = "0.34"
async-trait = "0.1"
thiserror = "2"
log = "0.4"
futures = "0.3"
base64 = "0.22"
image = "0.25"
env_logger = "0.11"
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", features = ["events"], optional = true }

[features]
default = ["cli", "voice", "web", "tui"]
cli = ["dep:clap"]
mcp = ["dep:rmcp", "dep:tokio"]
network = ["dep:notify", "dep:tokio"]
voice = ["dep:tokio", "dep:reqwest"]
web = ["dep:axum", "dep:tower-http", "dep:tokio"]
tui = ["dep:tokio", "dep:ratatui", "dep:crossterm"]
embed-onnx = ["dep:ort", "dep:ndarray", "dep:tokenizers"]
full = ["cli", "network", "voice", "web", "tui", "embed-onnx"]

[[bin]]
name = "physis-voice"
required-features = ["voice", "web"]
path = "src/bin/voice.rs"

[[bin]]
name = "physis-tui"
required-features = ["voice", "tui"]
path = "src/bin/tui.rs"

[[bin]]
name = "physis-web"
required-features = ["web"]
path = "src/bin/web_server.rs"
